[package]
name = "maxmind"
version = "0.1.0"
authors = ["Matthew Phillips <matthew.phillips@driveclutch.com>"]
edition = "2018"

[dependencies]
reqwest = {version = "0.11.3", features = ["blocking", "json"]}
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1.5.0", features = ["macros"] }
