[package]
name = "maxmind_geo_ip2"
version = "0.2.3"
authors = ["Matthew Phillips <matthew.t.phillips@protonmail.com>"]
description = "a REST API client for the MaxMind GeoIP2 API"
documentation = "https://github.com/mtphil/maxmind_geo_ip2"
readme = "README.md"
homepage = "https://github.com/mtphil/maxmind_geo_ip2"
repository = "https://github.com/mtphil/maxmind_geo_ip2"
license = "MIT"
edition = "2018"
keywords = ["maxmind", "geo-ip", "geoip"]
categories = ["web-programming::http-client"]
exclude = [
    ".idea/*",
    "src/bin.rs",
    "Cargo2.toml"
]

[dependencies]
reqwest = { version = "0.10", features = ["rustls", "json"] }
serde = { version = "1.0.125", features = ["derive"] }

[badges]
maintenance = {status = "experimental"}
